v0.0.7alpha/_sources/report/index.rst.txt
Transient Yield Report
=======================

.. note::

   This page is generated automatically from the latest published release,
   **v0.0.7alpha**, of UVEX Transients -- specifically its ``yield_summary.ecsv`` and
   ``detection_counts.ecsv`` data products (see :doc:`../user_guide`). It is
   regenerated on every documentation build, so it may lag between releases.

Summary
=======

.. list-table::
   :header-rows: 1
   :widths: 26 37 37

   * - Transient Type
     - Detection Probability
     - Expected Detections
   * - Ia Sne
     - :math:`0.0189^{+0.000356}_{-0.000351}\,{}^{+0}_{-0}`
     - :math:`152,458^{+2,876}_{-2,834}\,{}^{+11,728}_{-11,728}`
   * - Type Ib SNe
     - :math:`0.0212^{+0.00157}_{-0.00149}\,{}^{+0}_{-0}`
     - :math:`10,423^{+773}_{-731}\,{}^{+4,690}_{-4,940}`
   * - Type Ic SNe
     - :math:`0.0296^{+0.00238}_{-0.00224}\,{}^{+0}_{-0}`
     - :math:`8,791^{+707}_{-667}\,{}^{+4,482}_{-4,669}`
   * - Icbl Sne
     - :math:`0.00367^{+0.000806}_{-0.000690}\,{}^{+0}_{-0}`
     - :math:`1,394^{+306}_{-262}\,{}^{+1,178}_{-1,476}`
   * - Type IIb SNe
     - :math:`0.00274^{+0.000519}_{-0.000453}\,{}^{+0}_{-0}`
     - :math:`1,834^{+347}_{-302}\,{}^{+834}_{-877}`
   * - Type IIP SNe (Excess)
     - :math:`0.0252^{+0.000413}_{-0.000408}\,{}^{+0}_{-0}`
     - :math:`200,609^{+3,284}_{-3,243}\,{}^{+59,338}_{-67,212}`
   * - Type IIP SNe
     - :math:`0.00698^{+0.000210}_{-0.000205}\,{}^{+0}_{-0}`
     - :math:`61,597^{+1,851}_{-1,808}\,{}^{+18,220}_{-20,637}`
   * - Kilonova
     - :math:`0^{+0.0392}_{-0}\,{}^{+0}_{-0}`
     - :math:`0^{+4.09}_{-0}\,{}^{+0}_{-0}`
   * - LFBOT
     - :math:`0.0888^{+0.0347}_{-0.0273}\,{}^{+0}_{-0}`
     - :math:`323^{+126}_{-99.6}\,{}^{+80.8}_{-294}`
   * - SLSNe (Magnetar)
     - :math:`0.0895^{+0.00540}_{-0.00518}\,{}^{+0}_{-0}`
     - :math:`14,260^{+860}_{-825}\,{}^{+5,335}_{-7,727}`
   * - Tidal Disruption Event
     - :math:`0.124^{+0.00771}_{-0.00740}\,{}^{+0}_{-0}`
     - :math:`12,966^{+806}_{-774}\,{}^{+2,510}_{-4,183}`

Detections vs. Threshold
=========================

For each transient type, the expected number of UVEX events detected in at
least :math:`k` SNR-qualifying epochs, as :math:`k` increases. The narrow,
black-capped bars are 90% Clopper-Pearson simulation-only uncertainty; the
wide, pale bands are the event-rate uncertainty.

.. tab-set::

   .. tab-item:: Ia Sne

      .. image:: _images/ia_sne.png
         :width: 100%
         :align: center

   .. tab-item:: Type Ib SNe

      .. image:: _images/ib_sne.png
         :width: 100%
         :align: center

   .. tab-item:: Type Ic SNe

      .. image:: _images/ic_sne.png
         :width: 100%
         :align: center

   .. tab-item:: Icbl Sne

      .. image:: _images/icbl_sne.png
         :width: 100%
         :align: center

   .. tab-item:: Type IIb SNe

      .. image:: _images/iib_sne.png
         :width: 100%
         :align: center

   .. tab-item:: Type IIP SNe (Excess)

      .. image:: _images/iip_excess_sne.png
         :width: 100%
         :align: center

   .. tab-item:: Type IIP SNe

      .. image:: _images/iip_sne.png
         :width: 100%
         :align: center

   .. tab-item:: LFBOT

      .. image:: _images/lfbot.png
         :width: 100%
         :align: center

   .. tab-item:: SLSNe (Magnetar)

      .. image:: _images/slsne.png
         :width: 100%
         :align: center

   .. tab-item:: Tidal Disruption Event

      .. image:: _images/tde.png
         :width: 100%
         :align: center

